--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -6,16 +6,16 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy  }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info mb-3" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info mb-3" type="submit">Log In</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already have an account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+                Need an account? <a class="ml-2" href="{% url 'users-register' %}">Sign Up Now</a>
             </small>
         </div>
     </div>
